mobile fix overflow-x?

--- a/css/index.css
+++ b/css/index.css
@@ -768,20 +768,21 @@ footer .right li {
 /* line 2, ../scss/molecules/_background-day.scss */
 .background {
   background-color: #CBF2FF;
+  overflow-x: hidden;
 }
-/* line 4, ../scss/molecules/_background-day.scss */
+/* line 5, ../scss/molecules/_background-day.scss */
 .background .cloud-1 {
   top: 100px;
   -webkit-animation: cloud-1 80s;
   animation: cloud-1 80s;
 }
-/* line 9, ../scss/molecules/_background-day.scss */
+/* line 10, ../scss/molecules/_background-day.scss */
 .background .cloud-2 {
   top: 300px;
   -webkit-animation: cloud-2 80s;
   animation: cloud-2 80s;
 }
-/* line 14, ../scss/molecules/_background-day.scss */
+/* line 15, ../scss/molecules/_background-day.scss */
 .background .cloud-1, .background .cloud-2 {
   position: absolute;
   -webkit-animation-iteration-count: infinite;
@@ -821,8 +822,4 @@ footer .right li {
   to {
     right: 100%;
   }
-}
-/* line 38, ../scss/molecules/_background-day.scss */
-body {
-  overflow-x: hidden;
 }
